added translate button and function

--- a/node-exercise-2-api/views/index.hbs
+++ b/node-exercise-2-api/views/index.hbs
@@ -4,8 +4,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="font-size: 4vw;">This is some very nice text!</h1>
-    <p>And this is {{ name }}</p>
+    <h1 class="text" style="font-size: 4vw;">This is some very nice text!</h1>
+    <p class="text">And this is {{ name }}</p>
 
     <form>
         <input placeholder="Word..."/>
@@ -13,8 +13,8 @@
         <br/>
         <button id="random">Randomise word</button>
     </form>
-    <p id="p1"></p>
-    <p id="p2"></p>
+    <p class="text" id="p1"></p>
+    <p class="text" id="p2"></p>
 
     <script src="/js/app.js" type="text/javascript"></script>
 </body>
