--- a/node-exercise-2-api/views/index.hbs
+++ b/node-exercise-2-api/views/index.hbs
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1 class="text" style="font-size: 4vw;">This is some very nice text!</h1>
-    <p class="text">And this is {{ name }}</p>
+    <p class="text">And this is something</p>
 
     <form>
         <input placeholder="Word..."/>
